[LEMS-3369/fix-mobile-scrolling-spacing] Fix mobile new radio widget scroll styling, removing extra spaces

--- a/packages/perseus/src/widgets/radio/choice.module.css
+++ b/packages/perseus/src/widgets/radio/choice.module.css
@@ -23,7 +23,10 @@
     font-size: var(--wb-font-heading-size-medium);
     font-weight: var(--wb-font-weight-semi);
     line-height: var(--wb-font-heading-lineHeight-medium);
-    margin-block-end: var(--perseus-multiple-choice-divider-space);
+    /* Added !important below without this it will look double divider in mobile.
+     * TODO(LEMS-3301): When old radio widget is deleted, remove this !important.
+     */
+    margin-block-end: var(--perseus-multiple-choice-divider-space) !important;
     min-height: calc(var(--perseus-multiple-choice-spacing) * 4);
     padding: var(--perseus-multiple-choice-spacing);
     position: relative; /* Needed to enable the dividers (:before and :after pseudo-elements) to position correctly */
