--- a/packages/perseus/src/widgets/radio/multiple-choice.module.css
+++ b/packages/perseus/src/widgets/radio/multiple-choice.module.css
@@ -33,6 +33,7 @@
 .choice-list {
     padding: 0 !important;
     list-style: none !important;
+    margin: 0 !important; /* TODO(LEMS-3301): When old radio widget is deleted, remove this !important. */
     min-width: fit-content;
     width: 100%;
     scrollbar-width: thin;
